// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectBowler should render correctly when a player is disallowed 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="d-none d-md-block d-lg-block col-2 col-lg-3"
    />
    <div
      className="col-12 col-md-8 col-lg-6"
    >
      <div
        style={
          Object {
            "marginBottom": "10px",
            "padding": "20px",
            "width": "100%",
          }
        }
      >
        <div
          className="row"
          style={
            Object {
              "backgroundColor": "rgb(233, 236, 239)",
              "paddingLeft": "15px",
              "paddingTop": "4px",
            }
          }
        >
          <h4>
            Select bowler
          </h4>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "color": "rgb(233, 236, 239)",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 1
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 2
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 3
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 4
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 5
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 6
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 7
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 8
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 9
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 10
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 11
          </h6>
        </div>
      </div>
    </div>
  </div>
  <button
    className="btn btn-success"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "borderRadius": "25px",
        "bottom": "10px",
        "boxShadow": "0 4px 6px 0 rgba(0,0,0,.14), 0 4px 5px rgba(0,0,0,-1)",
        "fontSize": "18px",
        "height": "50px",
        "lineHeight": "1.33",
        "padding": "10px 16px",
        "position": "fixed",
        "right": "10px",
        "width": "50px",
        "zIndex": 1049,
      }
    }
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-check fa-w-16 "
      data-icon="check"
      data-prefix="fas"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>
</div>
`;

exports[`SelectBowler should render correctly when a player is selected 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="d-none d-md-block d-lg-block col-2 col-lg-3"
    />
    <div
      className="col-12 col-md-8 col-lg-6"
    >
      <div
        style={
          Object {
            "marginBottom": "10px",
            "padding": "20px",
            "width": "100%",
          }
        }
      >
        <div
          className="row"
          style={
            Object {
              "backgroundColor": "rgb(233, 236, 239)",
              "paddingLeft": "15px",
              "paddingTop": "4px",
            }
          }
        >
          <h4>
            Select bowler
          </h4>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 1
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 2
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 3
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 4
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 5
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 6
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-circle fa-w-16 "
              data-icon="circle"
              data-prefix="fas"
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
          <h6>
            Player 7
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 8
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 9
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 10
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 11
          </h6>
        </div>
      </div>
    </div>
  </div>
  <button
    className="btn btn-success"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "borderRadius": "25px",
        "bottom": "10px",
        "boxShadow": "0 4px 6px 0 rgba(0,0,0,.14), 0 4px 5px rgba(0,0,0,-1)",
        "fontSize": "18px",
        "height": "50px",
        "lineHeight": "1.33",
        "padding": "10px 16px",
        "position": "fixed",
        "right": "10px",
        "width": "50px",
        "zIndex": 1049,
      }
    }
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-check fa-w-16 "
      data-icon="check"
      data-prefix="fas"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>
</div>
`;

exports[`SelectBowler should render correctly when no player selected 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="d-none d-md-block d-lg-block col-2 col-lg-3"
    />
    <div
      className="col-12 col-md-8 col-lg-6"
    >
      <div
        style={
          Object {
            "marginBottom": "10px",
            "padding": "20px",
            "width": "100%",
          }
        }
      >
        <div
          className="row"
          style={
            Object {
              "backgroundColor": "rgb(233, 236, 239)",
              "paddingLeft": "15px",
              "paddingTop": "4px",
            }
          }
        >
          <h4>
            Select bowler
          </h4>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 1
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 2
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 3
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 4
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 5
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 6
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 7
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 8
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 9
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 10
          </h6>
        </div>
        <div
          className="row bowler-row"
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
        >
          <div
            style={
              Object {
                "color": "#007bff",
                "float": "left",
                "textAlign": "center",
                "width": "30px",
              }
            }
          />
          <h6>
            Player 11
          </h6>
        </div>
      </div>
    </div>
  </div>
  <button
    className="btn btn-success"
    disabled={true}
    onClick={[Function]}
    style={
      Object {
        "borderRadius": "25px",
        "bottom": "10px",
        "boxShadow": "0 4px 6px 0 rgba(0,0,0,.14), 0 4px 5px rgba(0,0,0,-1)",
        "fontSize": "18px",
        "height": "50px",
        "lineHeight": "1.33",
        "padding": "10px 16px",
        "position": "fixed",
        "right": "10px",
        "width": "50px",
        "zIndex": 1049,
      }
    }
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-check fa-w-16 "
      data-icon="check"
      data-prefix="fas"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>
</div>
`;
